noaa_weather_cli/src/output/render/snapshots/noaa_weather_cli__output__render__tests__single_alert.snap
---
source: noaa_weather_cli/src/output/render/tests.rs
expression: "options(ColorMode::Never, 100).render(&alert.summarize())"
---
Special Weather Statement
Special Weather Statement issued September 2 at 3:48AM EDT by NWS Grand Rapids MI

┌────────────────┬───────────────────────────────────────────────────────────────────────┐
│ ID             ┆ urn:oid:2.49.0.1.840.0.af7e0442df8bfed7953cb5cae6e4661304cc1f49.001.1 │
│ Area           ┆ Newaygo; Montcalm; Kent                                               │
│ Sender name    ┆ NWS Grand Rapids MI                                                   │
│ Sent           ┆ 2026-09-02 03:48 -04:00                                               │
│ Effective      ┆ 2026-09-02 03:48 -04:00                                               │
│ Onset          ┆ 2026-09-02 03:48 -04:00                                               │
│ Expires        ┆ 2026-09-02 04:45 -04:00                                               │
│ Ends           ┆ N/A                                                                   │
│ Status         ┆ actual                                                                │
│ Message type   ┆ Alert                                                                 │
│ Category       ┆ Met                                                                   │
│ Severity       ┆ Moderate                                                              │
│ Certainty      ┆ Observed                                                              │
│ Urgency        ┆ Expected                                                              │
│ Response       ┆ Execute                                                               │
│ Affected zones ┆ MIZ044, MIZ051, MIZ057                                                │
│ Note           ┆ N/A                                                                   │
│ Replaced by    ┆ N/A                                                                   │
│ Replaced at    ┆ N/A                                                                   │
└────────────────┴───────────────────────────────────────────────────────────────────────┘

Description
At 347 AM EDT, Doppler radar was tracking strong thunderstorms along
a line extending from near Howard City to 9 miles northeast of
Sparta. Movement was east at 30 mph.

HAZARD...Winds in excess of 40 mph and penny size hail.

SOURCE...Radar indicated.

IMPACT...Gusty winds could knock down tree limbs and blow around
unsecured objects. Minor damage to outdoor objects is
possible.

Locations impacted include...
Stanton... Howard City... Edmore...
Lakeview... Cedar Springs... Crystal...
Sidney... Sand Lake... Casnovia...
McBride... Pierson... Westville...
Gowen... Cedar Lake... Entrican...
Amble... Indian Lake... Vestaburg...
Wyman... Langston...

Instruction
If outdoors, consider seeking shelter inside a building.
