noaa_weather_cli/src/output/render/snapshots/noaa_weather_cli__output__render__tests__twelve_hour_forecast.snap
---
source: noaa_weather_cli/src/output/render/tests.rs
expression: "options(ColorMode::Never,\n100).render(&forecast.summarize(&SummaryOptions::default()))"
---
Forecast

┌─────────┬───────────────────────────────────────────────────┐
│ Updated ┆ 2026-09-02 06:26 +00:00                           │
│ Covers  ┆ 2026-09-02 00:00 +00:00 – 2026-09-10 01:00 +00:00 │
└─────────┴───────────────────────────────────────────────────┘

┌─────────────────┬────────────────────────┬───────┬───────────────────────┬───────────────────────┐
│ Period          ┆ Time                   ┆  Temp ┆ Wind                  ┆ Forecast              │
╞═════════════════╪════════════════════════╪═══════╪═══════════════════════╪═══════════════════════╡
│ Overnight       ┆ 2026-09-02 02:00       ┆ 75 °F ┆ 10 mph S              ┆ Partly Cloudy         │
│                 ┆ -05:00 – 2026-09-02    ┆       ┆                       ┆                       │
│                 ┆ 06:00 -05:00           ┆       ┆                       ┆                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ Wednesday       ┆ 2026-09-02 06:00       ┆ 99 °F ┆ 10 to 15 mph S gust   ┆ Mostly Sunny          │
│                 ┆ -05:00 – 2026-09-02    ┆       ┆ 25 mph                ┆                       │
│                 ┆ 18:00 -05:00           ┆       ┆                       ┆                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ Wednesday Night ┆ 2026-09-02 18:00       ┆ 76 °F ┆ 10 to 15 mph S gust   ┆ Partly Cloudy         │
│                 ┆ -05:00 – 2026-09-03    ┆       ┆ 20 mph                ┆                       │
│                 ┆ 06:00 -05:00           ┆       ┆                       ┆                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ Thursday        ┆ 2026-09-03 06:00       ┆ 98 °F ┆ 15 to 20 mph S gust   ┆ Mostly Sunny          │
│                 ┆ -05:00 – 2026-09-03    ┆       ┆ 30 mph                ┆                       │
│                 ┆ 18:00 -05:00           ┆       ┆                       ┆                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ Thursday Night  ┆ 2026-09-03 18:00       ┆ 76 °F ┆ 10 to 15 mph S gust   ┆ Mostly Clear          │
│                 ┆ -05:00 – 2026-09-04    ┆       ┆ 25 mph                ┆                       │
│                 ┆ 06:00 -05:00           ┆       ┆                       ┆                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ Friday          ┆ 2026-09-04 06:00       ┆ 97 °F ┆ 10 mph S gust 20 mph  ┆ Mostly Sunny          │
│                 ┆ -05:00 – 2026-09-04    ┆       ┆                       ┆                       │
│                 ┆ 18:00 -05:00           ┆       ┆                       ┆                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ Friday Night    ┆ 2026-09-04 18:00       ┆ 76 °F ┆ 5 to 10 mph S         ┆ Partly Cloudy         │
│                 ┆ -05:00 – 2026-09-05    ┆       ┆                       ┆                       │
│                 ┆ 06:00 -05:00           ┆       ┆                       ┆                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ Saturday        ┆ 2026-09-05 06:00       ┆ 96 °F ┆ 5 to 10 mph S         ┆ Mostly Sunny          │
│                 ┆ -05:00 – 2026-09-05    ┆       ┆                       ┆                       │
│                 ┆ 18:00 -05:00           ┆       ┆                       ┆                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ Saturday Night  ┆ 2026-09-05 18:00       ┆ 73 °F ┆ 5 mph S               ┆ Partly Cloudy         │
│                 ┆ -05:00 – 2026-09-06    ┆       ┆                       ┆                       │
│                 ┆ 06:00 -05:00           ┆       ┆                       ┆                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ Sunday          ┆ 2026-09-06 06:00       ┆ 94 °F ┆ 5 mph S               ┆ Slight Chance Rain    │
│                 ┆ -05:00 – 2026-09-06    ┆       ┆                       ┆ Showers               │
│                 ┆ 18:00 -05:00           ┆       ┆                       ┆                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ Sunday Night    ┆ 2026-09-06 18:00       ┆ 71 °F ┆ 5 mph SE              ┆ Partly Cloudy then    │
│                 ┆ -05:00 – 2026-09-07    ┆       ┆                       ┆ Slight Chance Showers │
│                 ┆ 06:00 -05:00           ┆       ┆                       ┆ And Thunderstorms     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ Labor Day       ┆ 2026-09-07 06:00       ┆ 92 °F ┆ 5 to 10 mph SE        ┆ Slight Chance Showers │
│                 ┆ -05:00 – 2026-09-07    ┆       ┆                       ┆ And Thunderstorms     │
│                 ┆ 18:00 -05:00           ┆       ┆                       ┆ then Mostly Sunny     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ Monday Night    ┆ 2026-09-07 18:00       ┆ 72 °F ┆ 10 mph SE gust 20 mph ┆ Partly Cloudy then    │
│                 ┆ -05:00 – 2026-09-08    ┆       ┆                       ┆ Slight Chance Showers │
│                 ┆ 06:00 -05:00           ┆       ┆                       ┆ And Thunderstorms     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ Tuesday         ┆ 2026-09-08 06:00       ┆ 90 °F ┆ 10 to 15 mph S gust   ┆ Slight Chance Showers │
│                 ┆ -05:00 – 2026-09-08    ┆       ┆ 25 mph                ┆ And Thunderstorms     │
│                 ┆ 18:00 -05:00           ┆       ┆                       ┆ then Mostly Sunny     │
└─────────────────┴────────────────────────┴───────┴───────────────────────┴───────────────────────┘
